--- a/public/index.html
+++ b/public/index.html
@@ -2,29 +2,46 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" type="image/png" href="%PUBLIC_URL%/house.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    
+    <!-- Meta Description -->
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="D. Elétrica - Soluções elétricas de alta qualidade em Volta Redonda e região. Serviços de instalação, manutenção e automação residencial com segurança e eficiência."
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>React App</title>
+    <!-- Meta Keywords -->
+    <meta
+      name="keywords"
+      content="eletricista, serviços elétricos, instalação elétrica, manutenção elétrica, automação residencial, Volta Redonda, energia solar, iluminação inteligente"
+    />
+
+    <!-- Meta Author -->
+    <meta name="author" content="D. Elétrica" />
+
+    <!-- Open Graph Meta Tags (para redes sociais) -->
+    <meta property="og:title" content="D. Elétrica - Soluções Elétricas de Alta Qualidade" />
+    <meta
+      property="og:description"
+      content="Oferecemos serviços elétricos de alta qualidade, incluindo instalação, manutenção e automação residencial. Atendemos Volta Redonda e região."
+    />
+    <meta property="og:image" content="%PUBLIC_URL%/og-image.jpg" />
+    <meta property="og:url" content="https://www.dudu-eletricista.com" />
+    <meta property="og:type" content="website" />
+
+    <!-- Twitter Card Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="D. Elétrica - Soluções Elétricas de Alta Qualidade" />
+    <meta
+      name="twitter:description"
+      content="Oferecemos serviços elétricos de alta qualidade, incluindo instalação, manutenção e automação residencial. Atendemos Volta Redonda e região."
+    />
+    <meta name="twitter:image" content="%PUBLIC_URL%/og-image.jpg" />
+
+    <!-- Título da Página -->
+    <title>D. Elétrica - Soluções Elétricas de Alta Qualidade</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
